--- a/quiz/templates/quiz/my_quizzes.html
+++ b/quiz/templates/quiz/my_quizzes.html
@@ -39,11 +39,11 @@
 
             <!-- Akcje -->
             <div class="px-6 py-4 bg-gray-50 flex justify-between items-center">
-                <a href="" class="text-blue-600 hover:text-blue-800">
+                <a href="{% url 'edit_quiz' quiz_id=quiz.id %}" class="text-blue-600 hover:text-blue-800">
                     Edit
                 </a>
-
-                <a href="" class="text-red-600 hover:text-red-800">
+                
+                <a href="{% url 'delete_quiz' quiz_id=quiz.id %}" class="text-red-600 hover:text-red-800">
                     Delete
                 </a>
             </div>
